syntax = "proto3";
package mycel.registry.v1;

import "gogoproto/gogo.proto";
import "mycel/registry/v1/domain_ownership.proto";
import "mycel/registry/v1/params.proto";
import "mycel/registry/v1/second_level_domain.proto";
import "mycel/registry/v1/top_level_domain.proto";

option go_package = "github.com/mycel-domain/mycel/x/registry/types";

// GenesisState defines the registry module's genesis state.
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
  repeated TopLevelDomain top_level_domains = 2
      [ (gogoproto.nullable) = false ];
  repeated SecondLevelDomain second_level_domains = 3
      [ (gogoproto.nullable) = false ];
  repeated DomainOwnership domain_ownerships = 4
      [ (gogoproto.nullable) = false ];
}
